# exagen

./: .gitignore  README.md  exagen.cabal  formula_parser.py  stack.yaml
app/: Main.hs
exams/: clean.zsh  template.tex
exams-2020-06-17/: .gitignore  clean.zsh  compile.zsh  red-signature.tex  sat.tex  smt.smt2.tex  sup.smt2.tex  template.tex
exams-2020-06-17/exam-01/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-precedence.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-02/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-03/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-04/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-weights.tex  sup.smt2.tex
exams-2020-06-17/exam-05/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-weights.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-06/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-07/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-08/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-09/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-10/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-11/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-12/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-weights.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-13/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-14/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-15/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-weights.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-16/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-17/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-18/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-weights.tex  sup.smt2.tex
exams-2020-06-17/exam-19/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-20/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-precedence.tex  sup.smt2.tex
exams-2020-06-17/exam-21/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-22/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-23/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-24/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-25/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-26/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-precedence.tex  sup.smt2.tex
exams-2020-06-17/exam-27/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-precedence.tex  sup.smt2.tex
exams-2020-06-17/exam-28/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-29/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2.tex
exams-2020-06-17/exam-30/: red-redundancy.smt2  red-signature.tex  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-31/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-precedence.tex  sup.smt2  sup.smt2.tex
exams-2020-06-17/exam-32/: red-redundancy.smt2  red-soundness.smt2  red.tex  sat.tex  smt.smt2  smt.smt2.tex  sup-weights.tex  sup.smt2  (+1 more)
generator/: README.md  exagen.cabal
generator/src/: Exagen.hs  Options.hs  Util.hs
generator/src/Control/Monad/: Choose.hs
generator/src/Data/: SExpr.hs
generator/src/Logic/: DefinitionalNF.hs  FirstOrder.hs  Formula.hs  SmtLib.hs
generator/src/Logic/FirstOrder/: Lens.hs  Types.hs
generator/src/Logic/Propositional/: Formula.hs
generator/src/Problems/: Redundancy.hs  SAT.hs  SMT.hs
generator/src/Text/Show/: Latex.hs
generator/test/: FormulaSpec.hs
paper/: .gitignore  SMT_template.tex  abstract.txt  appendix.tex  bib.bib  clean.sh  conclusion.tex  examsheet.tex  full_random.tex  ground_sup_template.tex  implementation.tex  main.tex  motivation.tex  teaching_comparison.tex
slides/: .gitignore  slides.tex
smt2tex/: formula_parser.py  lisp_parser.py  smt2tex.py
src/: Exagen.hs  Main.hs
test/: FormulaSpec.hs
(+47 files in other folders)
