cabal-version:      2.2
name:               exagen
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/JakobR/exagen#readme
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Rath
maintainer:         git@jakobrath.eu
copyright:          Copyright: (c) 2020 Jakob Rath
category:           Web
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

common executable-compile-options
  ghc-options:      -threaded
                    -rtsopts
                    "-with-rtsopts=-N -A32m"

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:  Exagen
                  , Logic.Propositional.Formula
  build-depends:    base >= 4.12 && < 5
                  , QuickCheck
  default-language: Haskell2010

executable exagen
  import:           warnings
                  , executable-compile-options
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.12 && < 5
                  , exagen

test-suite exagen-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    FormulaSpec
  build-depends:    base
                  , exagen
                  , checkers
                  , hspec
                  , hspec-checkers
                  , hspec-core
                  , hspec-discover
                  , QuickCheck
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
